--- a/space-tourism-website-main/space-tourism-website-main/styles/crew_commander_mobile.css
+++ b/space-tourism-website-main/space-tourism-website-main/styles/crew_commander_mobile.css
@@ -51,15 +51,16 @@ section {
     display: flex;
     flex-direction: column;
     gap: 30px;
+    border-bottom: 2px solid rgb(71, 73, 81);
 }
 
 .hero-p {
     display: flex;
     justify-content: center;
-    gap: 20px;
+    gap: 25px;
     color: #FFF;
     font-family: "Barlow Condensed";
-    font-size: 16px;
+    font-size: 18px;
     font-style: normal;
     font-weight: 400;
 }
@@ -69,8 +70,8 @@ section {
     justify-content: center;
     align-items: center;
     align-self: center;
-    width: 259px;
-    height: 259px;
+    width: 160px;
+    height: 222px;
     flex-shrink: 0;
 }
 
@@ -78,85 +79,52 @@ section {
     color: rgb(77, 79, 87);
 }
 
-.hero-list {
-    list-style-type: none;
+.section-2{
+    margin-top: 30px;
+    margin-bottom: 70px;
+}
+
+.section-2-svg {
     display: flex;
     justify-content: center;
+    align-self: center;
+}
+
+.section-2-sub1 {
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px; 
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    text-align: center;
+}
+
+.section-2-sub1-p {
+    display: flex;
+    flex-direction: column;
     gap: 20px;
-    color: #D0D6F9;
-    font-family: "Barlow Condensed";
-    font-size: 14px;
-    font-style: normal;
-    font-weight: 400;
 }
 
-.hero-list1 {
-    color: white;
-    padding-bottom: 10px;
-    border-bottom: 3px solid white;
-}
-
-.section-2 {
-    margin-top: 40px;
-}
-
-.section-2-p {
-    color: #FFF;
-    text-align: center;
+.section-2-sub1-p1 {
+    color: rgb(110, 112, 119);
     font-family: Bellefair;
-    font-size: 56px;
+    font-size: 16px;
     font-weight: 400;
 }
 
-.section-2-p1 {
+.section-2-sub1-p2 {
+    color: #FFF;
+    font-family: Bellefair;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+.section-2-sub1-p3 {
     color: #D0D6F9;
-    text-align: center;
     font-family: Barlow;
     font-size: 15px;
     font-weight: 400;
     width: 327px;
 }
-
-/* SECTION 3 */
-
-.section-3 {
-    margin-top: 40px;
-    border-top: 2px solid #383B4B ;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    text-align: center;
-    gap: 25px;
-    margin-bottom: 25px;
-}
-
-.section-3-p {
-    margin-top: 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-}
-
-.section-3-p1 {
-    color: #D0D6F9;
-    text-align: center;
-    font-family: "Barlow Condensed";
-    font-size: 14px;
-    font-weight: 400;
-}
-
-.section-3-sub {
-    display: flex;
-    flex-direction: column;
-    gap: 10px;
-
-}
-
-.section-3-p2 {
-    color: #FFF;
-    text-align: center;
-    font-family: Bellefair;
-    font-size: 28px;
-    font-weight: 400;
-}
-
