--- a/space-tourism-website-main/space-tourism-website-main/styles/crew_commander_mobile.css
+++ b/space-tourism-website-main/space-tourism-website-main/styles/crew_commander_mobile.css
@@ -19,16 +19,32 @@ body {
     overflow-x: hidden;
     color: var(--primary-color); 
     font-family: Barlow;
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: relative;
+    /* display: inline-block; */
+    min-width: 100%;
+}
+
+/* change poition to "fixed" do moving arund dosen't affect the display */
+.body_img {
+    pointer-events: none;
+    position: fixed; 
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    right: 0;
+    top: 0;
 }
 
 .head_head {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 1.5rem;
+    padding: 2rem;
     list-style-type: none;
+}
+
+.nav-ul {
+    display: none;
 }
 
 .container {
@@ -63,6 +79,7 @@ section {
     font-size: 18px;
     font-style: normal;
     font-weight: 400;
+    letter-spacing: 3.375px;
 }
 
 .hero-img {
@@ -127,4 +144,73 @@ section {
     font-size: 15px;
     font-weight: 400;
     width: 327px;
+}
+
+
+@media (min-width: 768px) {
+    .container {
+        /* background-color: red; */
+        display: flex;
+        flex-direction: column-reverse;
+        position: relative;
+        margin-top: 20px;
+    }
+
+    .menu {
+        display: block;
+        z-index: 2;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .nav-ul {
+        display: flex;
+        list-style-type: none;
+        gap: 15px;
+        font-family: "Barlow Condensed";
+        font-size: 14px;
+        font-weight: 400;
+        /* padding-right: 1rem; */
+        letter-spacing: 2.362px;
+    }
+
+    ul li:hover {
+        border-bottom: 3px solid #FFF;
+        padding-bottom: 1.5rem;
+    }
+
+    .section-2 {
+        /* background-color: red; */
+        display: flex;
+        flex-direction: column-reverse;
+        gap: 20px;
+    }
+
+    .hero-img {
+        width: 400.37px;
+        height: 472px;
+        flex-shrink: 0;
+    }
+
+    .hero {
+        border-bottom: none;
+        position: relative;
+    }
+
+    .hero-p {
+        /* background-color: red; */
+        position: absolute;
+        top: -320px;
+        left: 15px;
+    }
+
+    .section-2-sub1 {
+        margin-top: 20px;
+    }
+
+    .section-2-sub1-p3 {
+        width: 400px;
+    }
 }
