--- a/space-tourism-website-main/space-tourism-website-main/styles/style.css
+++ b/space-tourism-website-main/space-tourism-website-main/styles/style.css
@@ -19,8 +19,20 @@ body {
     overflow-x: hidden;
     color: var(--primary-color); 
     font-family: Barlow;
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: relative;
+    /* display: inline-block; */
+    min-width: 100%;
+}
+
+/* change poition to "fixed" do moving arund dosen't affect the display */
+.body_img {
+    pointer-events: none;
+    position: fixed; 
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    right: 0;
+    top: 0;
 }
 
 .head_head {
@@ -30,6 +42,29 @@ body {
     padding: 1.5rem;
     list-style-type: none;
 }
+
+/* .oluchi {
+    transform: translateX(0);
+} */
+
+.nav-ul {
+    display: none;
+}
+
+
+/* .nav-ul {
+    position: fixed;
+    align-items: center;
+    width: 100%;
+    height: 100vh;
+    background-color: var(--white);
+    top: 0;
+    left: 0;
+    z-index: 1;
+    display: block;
+    padding: 5rem 2rem;
+    transform: translateX(-100%);
+} */
 
 .container {
     scroll-snap-type: y mandatory;
@@ -68,12 +103,18 @@ section {
     font-weight: 400;
 }
 
+a {
+    text-decoration: none;
+    color: inherit;
+}
+
 .hero-p2 {
     color: #D0D6F9;
     text-align: center;
     font-family: Barlow;
     font-size: 15px;
     font-weight: 400;
+    width: 327px;
 }
 
 /* SECTION-2 */
@@ -105,4 +146,53 @@ section {
     font-size: 20px;
     font-family: Bellefair;
     font-weight: 400;
+}
+
+@media (min-width: 768px) {
+    .menu {
+        display: block;
+        z-index: 2;
+    }
+
+    .menu {
+        display: none;
+    }
+
+    .nav-ul {
+        display: flex;
+        list-style-type: none;
+        gap: 15px;
+        font-family: "Barlow Condensed";
+        font-size: 14px;
+        font-weight: 400;
+        padding-right: 1rem;
+        letter-spacing: 2.362px;
+    }
+
+    ul li:hover {
+        border-bottom: 3px solid #FFF;
+        padding-bottom: 1.5rem;
+    }
+
+    /* .nav-ul {
+        position: fixed;
+        align-items: center;
+        width: 500%;
+        height: 100vh;
+        background-color: var(--white);
+        top: 0;
+        left: 0;
+        z-index: 1;
+        display: block;
+        padding: 5rem 2rem;
+        transform: translateX(-100%);
+    } */
+
+    .oluchi {
+        transform: translateX(50%);
+        background-color: red;
+    }
+
+
+    
 }
