--- a/space-tourism-website-main/space-tourism-website-main/styles/technology_vehicle.css
+++ b/space-tourism-website-main/space-tourism-website-main/styles/technology_vehicle.css
@@ -13,15 +13,27 @@
 }
 
 
-
 body {
     background-color: black;
     overflow-x: hidden;
     color: var(--primary-color); 
     font-family: Barlow;
-    background-repeat: no-repeat;
-    background-size: cover;
+    position: relative;
+    /* display: inline-block; */
+    min-width: 100%;
 }
+
+/* change poition to "fixed" do moving arund dosen't affect the display */
+.body_img {
+    pointer-events: none;
+    position: fixed; 
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+    right: 0;
+    top: 0;
+}
+
 
 .head_head {
     display: flex;
