responsiveness for tablet destination mars

--- a/space-tourism-website-main/space-tourism-website-main/styles/destination_moon.css
+++ b/space-tourism-website-main/space-tourism-website-main/styles/destination_moon.css
@@ -210,6 +210,10 @@ section {
         padding-left: 1rem;
     }
 
+    .section-2-p1 {
+        width: 400px;
+    }
+
     .section-3 {
         flex-direction: row;
     }
