--- a/space-tourism-website-main/space-tourism-website-main/styles/destination_mars.css
+++ b/space-tourism-website-main/space-tourism-website-main/styles/destination_mars.css
@@ -43,6 +43,10 @@ body {
     list-style-type: none;
 }
 
+.nav-li {
+    display: none;
+}
+
 .container {
     scroll-snap-type: y mandatory;
     /* width: 100%; */
@@ -140,6 +144,7 @@ section {
     margin-top: 40px;
     border-top: 2px solid #383B4B ;
     display: flex;
+    justify-content: center;
     flex-direction: column;
     align-items: center;
     text-align: center;
@@ -148,7 +153,6 @@ section {
 }
 
 .section-3-p {
-    margin-top: 20px;
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -176,3 +180,50 @@ section {
     font-size: 28px;
     font-weight: 400;
 }
+
+@media (min-width: 768px) {
+    .menu {
+        display: none;
+    }
+
+    .nav-ul {
+        display: flex;
+        list-style-type: none;
+        gap: 15px;
+        font-family: "Barlow Condensed";
+        font-size: 14px;
+        font-weight: 400;
+        padding-right: 1rem;
+        letter-spacing: 2.362px;
+    }
+
+    ul li:hover {
+        border-bottom: 3px solid #FFF;
+        padding-bottom: 1.5rem;
+    }
+
+    .hero-p {
+        display: flex;
+        justify-content: flex-start;
+        gap: 20px;
+        padding-left: 1rem;
+    }
+
+    .section-2-p1{
+        width: 400px;
+    }
+
+    .section-3 {
+        flex-direction: row;
+    }
+
+    .section-3-p {
+        margin-top: 15px;
+    }
+    .section-3-sub {
+        margin-top: 15px;
+    }
+
+}
+
+
