--- a/styles/style.css
+++ b/styles/style.css
@@ -169,25 +169,40 @@ a {
         padding-bottom: 1.5rem;
     }
 
-    /* .nav-ul {
-        position: fixed;
-        align-items: center;
-        width: 500%;
-        height: 100vh;
-        background-color: var(--white);
-        top: 0;
-        left: 0;
-        z-index: 1;
-        display: block;
-        padding: 5rem 2rem;
-        transform: translateX(-100%);
-    } */
 
     .oluchi {
         transform: translateX(50%);
         background-color: red;
+    } 
+}
+
+@media (min-width: 992px) { 
+    .container {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        align-self: center;
+        height: 80vh;
+        /* margin-top: 100px; */
     }
 
+    .section-2 {
+        /* background-color: red; */
+        margin-bottom: 0;
+    }
+    
+    .hero-p {
+        text-align: left;
+    }
+
+    .hero-p1 {
+        text-align: left;
+        background-color: red;
+    }
+
+    .hero-p2 {
+        text-align: left;
+    }
 
     
 }
