--- a/styles/style.css
+++ b/styles/style.css
@@ -93,6 +93,7 @@ section {
     font-family: "Barlow Condensed";
     font-size: 16px;
     font-weight: 400;
+    letter-spacing: 4.725px;
 }
 
 .hero-p1 {
@@ -101,6 +102,7 @@ section {
     font-family: Bellefair;
     font-size: 80px;
     font-weight: 400;
+    letter-spacing: 4.725px;
 }
 
 a {
@@ -180,15 +182,22 @@ a {
     .container {
         display: flex;
         justify-content: space-around;
+        gap: 150px;
         align-items: center;
         align-self: center;
         height: 80vh;
         /* margin-top: 100px; */
     }
 
+    .hero {
+        align-items: flex-start;
+    }
+
     .section-2 {
-        /* background-color: red; */
         margin-bottom: 0;
+        width: 274px;
+        height: 274px;
+        flex-shrink: 0;
     }
     
     .hero-p {
@@ -197,7 +206,6 @@ a {
 
     .hero-p1 {
         text-align: left;
-        background-color: red;
     }
 
     .hero-p2 {
