--- a/styles/destination_moon.css
+++ b/styles/destination_moon.css
@@ -34,6 +34,10 @@ body {
     top: 0;
 }
 
+a {
+    text-decoration: none;
+}
+
 .head_head {
     display: flex;
     justify-content: space-between;
