--- a/styles/crew_commander_mobile.css
+++ b/styles/crew_commander_mobile.css
@@ -28,6 +28,20 @@ a {
     text-decoration: none;
 }
 
+.link-style:link,
+.link-style:visited,
+.link-style:hover,
+.link-style:focus {
+    color: white;
+    text-decoration: none;
+}
+
+.link-style-c:active {
+    color: blue;
+    background-color: red;
+}
+
+
 /* change poition to "fixed" do moving arund dosen't affect the display */
 .body_img {
     pointer-events: none;
@@ -86,6 +100,18 @@ section {
     letter-spacing: 3.375px;
 }
 
+.hero-p-ment {
+    display: flex;
+    justify-content: center;
+    gap: 25px;
+    color: #FFF;
+    font-family: "Barlow Condensed";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 3.375px;
+}
+
 .hero-img {
     display: flex;
     justify-content: center;
@@ -97,6 +123,10 @@ section {
 }
 
 .hero-p1 {
+    color: rgb(77, 79, 87);
+}
+
+.hero-p1-ment{
     color: rgb(77, 79, 87);
 }
 
@@ -203,9 +233,7 @@ section {
     }
 
     .hero-p {
-        position: absolute;
-        top: -320px;
-        left: 15px;
+        
     }
 
     .section-2-sub1 {
@@ -222,24 +250,38 @@ section {
     .container {
         display: flex;
         flex-direction: row-reverse;
-        /* justify-content: space-around; */
         justify-content: center;
         gap: 150px;
         align-items: center;
         align-self: center;
         height: 80vh;
-        /* margin-top: 100px; */
+        position: relative;
+    }
+
+    .section-2-svg {
+        justify-content: flex-start;
+    }
+
+    .section-2-sub1 {
+        justify-content: flex-start;
+        text-align: left;
+    }
+
+    .section-2-sub1-p {
+        justify-content: flex-start;
+        align-self:self-start;
+        text-align: left;
     }
 
     .hero-p {
-        /* position: absolute;
-        top: 50px;
-        right: 500px; */
-        position: relative;
-        
+        display: flex;
+        display:inline-flex;
+        position: absolute;
+        top: 0;
+        right: 680px;
+        width: 100%;
+
     }
 
-    /* .body_img {
-        margin-top: 20px;
-    } */
+    
 }
