--- a/styles/technology_vehicle.css
+++ b/styles/technology_vehicle.css
@@ -53,6 +53,23 @@ body {
     /* box-sizing: border-box; */
 }
 
+.a {
+    text-decoration: none;
+}
+
+.link-style:link,
+.link-style:visited,
+.link-style:hover,
+.link-style:focus {
+    color: white;
+    text-decoration: none;
+}
+
+/* .link-style-c:active {
+    color: blue;
+    background-color: red;
+} */
+
 section {
     position: relative;
     scroll-snap-align: start;
