--- a/styles/crew_commander_mobile.css
+++ b/styles/crew_commander_mobile.css
@@ -15,31 +15,15 @@
 
 
 body {
-    background-color: black;
+    /* background-color: black; */
     overflow-x: hidden;
     color: var(--primary-color); 
     font-family: Barlow;
     position: relative;
     /* display: inline-block; */
-    min-width: 100%;
+    max-width: 100%;
 }
 
-a {
-    text-decoration: none;
-}
-
-.link-style:link,
-.link-style:visited,
-.link-style:hover,
-.link-style:focus {
-    color: white;
-    text-decoration: none;
-}
-
-.link-style-c:active {
-    color: blue;
-    background-color: red;
-}
 
 
 /* change poition to "fixed" do moving arund dosen't affect the display */
@@ -51,18 +35,6 @@ a {
     z-index: -1;
     right: 0;
     top: 0;
-}
-
-.head_head {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem;
-    list-style-type: none;
-}
-
-.nav-ul {
-    display: none;
 }
 
 .container {
@@ -187,32 +159,35 @@ section {
         flex-direction: column-reverse;
         position: relative;
         margin-top: 20px;
+        /* display: flex;
+        justify-content: center;
+        gap: 150px;
+        align-items: center;
+        align-self: center;
+        height: 80vh; */
     }
 
     .menu {
         display: block;
         z-index: 2;
-    }
-
-    .menu {
         display: none;
     }
 
-    .nav-ul {
+    
+    /* .nav-ul {
         display: flex;
         list-style-type: none;
         gap: 15px;
         font-family: "Barlow Condensed";
         font-size: 14px;
         font-weight: 400;
-        /* padding-right: 1rem; */
         letter-spacing: 2.362px;
     }
 
     ul li:hover {
         border-bottom: 3px solid #FFF;
         padding-bottom: 1.5rem;
-    }
+    } */
 
     .section-2 {
         /* background-color: red; */
@@ -252,6 +227,8 @@ section {
         align-self: center;
         height: 80vh;
         position: relative;
+        margin-top: 80px;
+        max-width: 1200px;
     }
 
     .section-2-svg {
