--- a/styles/commonstyles.css
+++ b/styles/commonstyles.css
@@ -25,7 +25,7 @@
     margin-right: -30px; */
 }
 
-a {
+/* a {
     text-decoration: none;
 }
 
@@ -39,7 +39,7 @@ a {
 .link-style:focus {
     color: white;
     text-decoration: none;
-}
+} */
 
 @media (min-width: 768px) {
     .head-border {
@@ -55,11 +55,31 @@ a {
         letter-spacing: 2.362px;
         background-color: rgb(25, 27, 37);
     }
+/* 
+    ul li {
+        padding-bottom: 0.2rem;
+    } */
 
-    ul li:hover {
-        border-bottom: 3px solid #FFF;
-        padding-bottom: 1.5rem;
+
+    li a {
+        color: white;
+        text-decoration: none;
+        padding-bottom: 5px;
+        border-bottom: 1px solid transparent;
+        transition: border-color 0.3s;
     }
+
+    /* Change color of active link */
+    li a:hover,
+    li a:active {
+        color: inherit; 
+        border-bottom: 3px solid white;
+    }    
+
+    /* li a:hover {
+        border-bottom: 3px solid #FFF;
+        padding-bottom: 1rem;
+    } */
 
 }
 
