--- a/styles/destination_moon.css
+++ b/styles/destination_moon.css
@@ -34,21 +34,6 @@ body {
     top: 0;
 }
 
-/* a {
-    text-decoration: none;
-}
-
-.head_head {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 2rem;
-    list-style-type: none;
-}
-
-.nav-ul {
-    display: none;
-} */
 
 .container {
     scroll-snap-type: y mandatory;
@@ -110,11 +95,11 @@ section {
     font-weight: 400;
 }
 
-.hero-list1 {
+/* .hero-list1 {
     color: white;
     padding-bottom: 10px;
     border-bottom: 3px solid white;
-}
+} */
 
 .section-2 {
     margin-top: 40px;
@@ -157,7 +142,6 @@ section {
 }
 
 .section-3-p {
-    /* margin-top: 20px; */
     display: flex;
     flex-direction: column;
     gap: 10px;
@@ -206,6 +190,22 @@ section {
         border-bottom: 3px solid #FFF;
         padding-bottom: 1.5rem;
     } */
+
+    li a {
+        color: white;
+        text-decoration: none;
+        padding-bottom: 5px;
+        border-bottom: 1px solid transparent;
+        transition: border-color 0.3s;
+    }
+
+    /* Change color of active link */
+    li a:hover,
+    li a:active {
+        color: inherit; 
+        border-bottom: 3px solid white;
+    }    
+
 
     .hero-p {
         display: flex;
