--- a/styles/destination_moon.css
+++ b/styles/destination_moon.css
@@ -14,7 +14,7 @@
 
 
 body {
-    background-color: black;
+    /* background-color: black; */
     overflow-x: hidden;
     color: var(--primary-color); 
     font-family: Barlow;
