--- a/styles/commonstyles.css
+++ b/styles/commonstyles.css
@@ -11,35 +11,84 @@
     margin-right: 20px;
 }
 
-/* .oluchi {
-    transform: translateX(0);
-} */
 
 .nav-ul {
-    display: none;
-    background-color: rgb(25, 27, 37);
-    /* padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
-    padding-left: 4rem;
-    padding-right: 4rem;
-    margin-right: -30px; */
+    display: flex;
+    gap: 40px;
+    list-style: none;
 }
 
-/* a {
-    text-decoration: none;
-}
-
-.head-border {
+.menu {
     display: none;
 }
 
-.link-style:link,
-.link-style:visited,
-.link-style:hover,
-.link-style:focus {
+.nav-item {
+    display: flex;
+    gap: 10px;
+
+}
+
+.nav-item-sub {
+    font-weight: 600;
+}
+
+.main-nav-item a  {
     color: white;
     text-decoration: none;
-} */
+    padding-bottom: 5px;
+    border-bottom: 3px solid transparent;
+    transition: border-color 0.3s;
+}
+
+
+.main-nav-item a:hover,
+.main-nav-item a:active {
+    color: inherit; 
+    border-color:white;
+}    
+
+
+
+@media(max-width: 767px) {
+    .menu {
+        display: block;
+        z-index: 2;
+    }
+
+    .nav-ul {
+        position: fixed;
+        width: 55%;
+        height: 100vh;
+        background-color: var(--white);
+        top: 0;
+        right: 0;
+        z-index: 1;
+        display:flex;
+        justify-content: center;
+        flex-direction: column;
+        padding: 5rem 2rem;
+        transform: translateX(100%);
+        /* background-color: rgba(11, 11, 11, 0.2); */
+        background-color: rgb(22, 26, 36, 0.2);
+        backdrop-filter: blur(10px);
+        font-size: 30px;
+    }
+
+    .oluchi {
+        transform: translateX(0);
+    }
+
+    /* .nav-li {
+        display: block;
+        margin: auto;
+        width: max-content;
+        margin-bottom: 1rem;
+    } */
+
+
+}
+
+
 
 @media (min-width: 768px) {
     .head-border {
@@ -54,32 +103,27 @@
         font-weight: 400;
         letter-spacing: 2.362px;
         background-color: rgb(25, 27, 37);
+        padding-top: 1rem;
+        padding-bottom: 1rem;
     }
-/* 
-    ul li {
-        padding-bottom: 0.2rem;
-    } */
 
 
-    li a {
+    /* .main-nav-item a  {
         color: white;
         text-decoration: none;
         padding-bottom: 5px;
-        border-bottom: 1px solid transparent;
+        border-bottom: 3px solid transparent;
         transition: border-color 0.3s;
     }
 
-    /* Change color of active link */
-    li a:hover,
-    li a:active {
-        color: inherit; 
-        border-bottom: 3px solid white;
-    }    
 
-    /* li a:hover {
-        border-bottom: 3px solid #FFF;
-        padding-bottom: 1rem;
-    } */
+    .main-nav-item a:hover,
+    .main-nav-item a:active {
+        color: inherit; 
+        border-color:white;
+    }     */
+
+
 
 }
 
@@ -115,8 +159,3 @@
     }
 }
 
-/* @media (min-width: 1250px) {
-    .head-border {
-        left: 300px;
-    }
-    } */
